<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="FirebaseActivity" >

    <ImageView
        android:id="@+id/weatherIconInDb"
        android:layout_width="102dp"
        android:layout_height="62dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:paddingLeft="20sp"
                android:text="@string/studentId"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/studentId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/studentId"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:paddingLeft="20sp"
                android:text="@string/studentName"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/studentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/studentName"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:paddingLeft="20sp"
                android:text="@string/studentFathers_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/studentFathersName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/studentFathers_name"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:paddingLeft="20sp"
                android:text="@string/studentSurname"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/studentSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/studentSurname"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/studentNational_ID"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/studentNationalId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/studentNational_ID"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/studentGender"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/mRadioBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7sp"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/GenderM" />

                <RadioButton
                    android:id="@+id/fRadioBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7sp"
                    android:gravity="center"
                    android:text="@string/GenderF" />
            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">


            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/studentDate_of_birth"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="40sp"
                />

            <Button
                android:id="@+id/dateBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7sp"
                android:backgroundTint="#29B302"
                android:text="@string/dateBTN"
                android:textColor="#000000"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="10sp"
        android:gravity="center|fill_vertical">

        <Button
            android:id="@+id/insertBTN"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_margin="10sp"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:text="@string/insertBtn"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/updateBTN"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_margin="10sp"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:text="@string/updateBTN"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/deleteBTN"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_margin="10sp"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:text="@string/delBtn"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13sp"
        android:gravity="center">

        <Button
            android:id="@+id/viewAllBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7sp"
            android:backgroundTint="@color/black"
            android:text="@string/viewAllBtn"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/searchByIdBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7sp"
            android:backgroundTint="@color/black"
            android:text="@string/searchByIdBtn"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </TableRow>

    <Button
        android:id="@+id/goToFbListBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:backgroundTint="#0B5291"
        android:gravity="center"
        android:text="@string/go2StdListBtn"
        android:textStyle="bold" />

    <Button
        android:id="@+id/goToSQLiteBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/go2SQLBtn"
        android:visibility="invisible" />

</LinearLayout>