<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="MainActivity">

    <!--display the temperature-->

    <!--display the weather description-->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center">

        <TableRow
            android:layout_width="312dp"
            android:layout_height="match_parent"
            android:textAlignment="center">

            <TextView
                android:id="@+id/temperatureTv"
                android:layout_width="290dp"
                android:layout_height="116dp"
                android:gravity="center"
                android:text="Temp"
                android:textColor="#020000"
                android:textSize="50sp"
                android:textStyle="bold|italic" />

        </TableRow>

        <TableRow
            android:layout_width="277dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:textAlignment="center">

            <TextView
                android:id="@+id/cityTv"
                android:layout_width="195dp"
                android:layout_height="match_parent"
                android:gravity=""
                android:text="-NaN-"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:layout_width="264dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center">

            <TextView
                android:id="@+id/weatherTv"
                android:layout_width="223dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="50dp"
                android:text="-NaN-"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/weatherIconInSQLite"
                android:layout_width="223dp"
                android:layout_height="86dp" />
        </TableRow>

        <TableRow
            android:layout_width="323dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center">

            <TextView
                android:id="@+id/humidityTv"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:gravity=""
                android:text="-NaN-"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="italic" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40sp"
            android:gravity="center"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weatherTv"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center">

            <EditText
                android:id="@+id/weatherEt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/city_search"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center">

            <Button
                android:id="@+id/getWeatherBTN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#D50404"
                android:text="@string/getWeatherBtn" />
        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/goToFirebaseBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00BCD4"
            android:text="@string/go2FirebaseBtn"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.116" />

        <Button
            android:id="@+id/goToSQLiteBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFEB3B"
            android:text="@string/go2SQLBtn"
            android:textColor="#3C3C3C"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.349" />

        <Button
            android:id="@+id/goToFbListBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go2StdListBtn"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintVertical_bias="0.813" />

        <Button
            android:id="@+id/goToSQLiteListBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go2SQListBtn"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/goToFbListBTN"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.815" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>